New try Test anagrams with 2 chars